# rsp-bot

./: .env.example  .gitignore  README.md  bot.py  config.py  pyproject.toml
handlers/: other_handlers.py  user_handlers.py
keyboards/: keyboards.py
services/: services.py
vocabularies/: ru.py
