[tool.poetry]
name = "rsp-bot"
version = "0.1.0"
description = ""
authors = ["Vasiliy Kryuchkov <vvvvk@yandex.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
aiogram = "^2.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
